# lab06

./: CMakeLists.txt  CPack.cmake  README.md
.github/workflows/: CPack.yml  build.yml
