cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(BUILD_TESTS "Build tests" OFF)

project(banking)

add_library(banking STATIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/banking/Transaction.cpp 
    ${CMAKE_CURRENT_SOURCE_DIR}/banking/Account.cpp
)

target_include_directories(banking PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/banking
)

if(BUILD_TESTS)
  add_compile_options(--coverage)
  target_link_libraries(banking gcov)

  enable_testing()
  add_subdirectory(third-party/gtest)
  
  file(GLOB BANKING_TEST_SOURCES tests/*.cpp)
  add_executable(check ${BANKING_TEST_SOURCES})
  
  target_link_libraries(check banking gtest_main)
  
  add_test(NAME check COMMAND check)
endif()
